--- a/SimpleEC2InstanceScheduler.yaml
+++ b/SimpleEC2InstanceScheduler.yaml
@@ -60,10 +60,10 @@ Resources:
                   for instance in reservation['Instances']:
                       ec2instance=instance.get("InstanceId")
                       ec2list.append(ec2instance)
-              print("Found instances: " + ec2list)
+              print("Found instances: " + str(ec2list))
               try:
                   start = client.stop_instances(InstanceIds=ec2list)
-                  print("Stoping instances: " + ec2list)
+                  print("Stopping instances: " + str(ec2list))
               except:
                   print("There are no instances to stop.")
 
@@ -116,10 +116,10 @@ Resources:
                   for instance in reservation['Instances']:
                       ec2instance=instance.get("InstanceId")
                       ec2list.append(ec2instance)
-              print("Found instances: " + ec2list)
+              print("Found instances: " + str(ec2list))
               try:
                   start = client.start_instances(InstanceIds=ec2list)
-                  print("Starting instances: " + ec2list)
+                  print("Starting instances: " + str(ec2list))
               except:
                   print("There are no instances to start.")
 
